# MeraCapitalTestApp

./: .env.example  README.md  docker-compose.yml  pyproject.toml
api/: __init__.py  endpoints.py
api/endpoints/: currencies.py  pricestamps.py
api/models/: currencies.py  pricestamps.py
config/: __init__.py  config.py
database/: __init__.py  database.py
database/migrations/: dump.sql  env.py
database/migrations/versions/: 9c5a3e031784_create_pricestamps_table.py  fb1811c71ea2_create_currencies_table.py
database/tables/: currencies.py  pricestamps.py
exceptions/: currencies.py  sql_errors.py
scanner/: __init__.py  currency.py  scanner.py
scanner_app/: __init__.py  scanner.py
tests/: test_scanner.py
utils/: sqlalchemy_error_parsing.py
